# HXTest

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  addSubDir.sh
src/01-hansya-live/: CMakeLists.txt  main.cpp
src/01-hansya-prime/: CMakeLists.txt  main.cpp
src/02-link-property/: CMakeLists.txt  head.cpp  head.h  inline关键字的作用.md  main.cpp
src/03-random/: CMakeLists.txt  main.cpp  现代伪随机数生成.md
src/04-tbb/: CMakeLists.txt  tbb-理解常用并行算法及其实现原理.md
src/04-tbb/demo/00-start/: 03_download_parallel_invoke.cpp  download_std_thread.cpp
src/04-tbb/demo/01-map/: 03_map_parallel_for.cpp
src/04-tbb/demo/02-reduce/: 01_reduce_std.cpp  02_reduce_task_group.cpp  03_reduce_parallel_reduce.cpp  04_reduce_good.cpp
src/04-tbb/demo/03-scan/: 01_scan_std.cpp  02_scan_task_group.cpp  03_scan_parallel_scan.cpp
src/04-tbb/demo/04-task_arena/: 01_task_arena.cpp
src/04-tbb/demo/05-for_for/: 02_for_for_deadlock.cpp  04_isolate_hk_deadlock.cpp
src/04-tbb/demo/05_for_for/: 01_for_for.cpp  03_arena_hk_deadlock.cpp
src/04-tbb/demo/06-partitioner/: 01_static_partitioner.cpp  02_simple_partitioner.cpp  03_auto_partitioner.cpp  04_uneven_situation_test.cpp  05_affinity_partitioner.cpp  06_particle_size_comparison_test.cpp  07_matrix_transposition.cpp
src/04-tbb/demo/07-concurrent_container/: 01_std_vector.cpp  02_concurrent_vector.cpp
src/04-tbb/demo/08-filter/: 01_std_filter.cpp  02_tbb_filer_err.cpp  03_tbb_filter_ok.cpp  04_tbb_filter_okk.cpp  05_tbb_filter_std_mtx.cpp  06_tbb_filter_std_mtx_good.cpp  07_tbb_filer_spin_mtx.cpp  08_tbb_filer_pod.cpp  09_tbb_filer_susume_nai.cpp  10_tbb_filer_gpu.cpp
src/04-tbb/demo/09-divide_and_conquer/: 01_std_fib.cpp  02_tbb_task_fib.cpp  03_tbb_parallel_invoke_fib.cpp  04_tbb_scheduling_overhead_fib.cpp
src/04-tbb/demo/10-sort/: 01_std_sort.cpp  02_tbb_sort.cpp  03_tbb_divide_reduce.cpp
src/04-tbb/demo/11-pipeline/: 01_std_for.cpp  02_tbb_for.cpp  03_tbb_4for.cpp  04_tbb_pipeline.cpp
src/04-tbb/demo/map/: 01_map_std.cpp  02_map_task_group.cpp  04_map_blocked_range.cpp
src/06-std-analyse/: CMakeLists.txt
src/06-std-analyse/demo/01-constexpr/: 01_if.cpp  02_for.cpp  03_toString.cpp  04_primeNumber.cpp
src/06-std-analyse/demo/02-tuple/: 01_tuple.cpp  02_tuple.cpp
src/06-std-analyse/demo/03-memory/: 01_UniquePtr.cpp  02_SharedPtr.cpp  03_new_memory.cpp
src/06-std-analyse/demo/04-sort/: 01_QuickSort.cpp  01_sort.cpp  02_HeapSort.cpp
src/06-std-analyse/demo/05-pmh/: 01_test_pmh_map.cpp  02_cp_pmh_test.cpp  03_test_pmh.cpp  04_hx_pmh_map.cpp  add.py
src/06-std-analyse/demo/06-hash-map/: 01_hash_map.cpp
src/06-std-analyse/test/01-tp-ForwardDeclaration/: test_01.cpp  test_02.cpp
src/06-std-analyse/test/02-crtp/: 01_crtp.cpp
src/06-std-analyse/test/03-coroutine/: 01_co_test.cpp  02_co_al.cpp  03_co_al_to_c.cpp  04_co_my.cpp  05_co_res.cpp
src/06-std-analyse/test/04-select-ub/: 01_ub_look.cpp  02_test_is_ub.cpp
src/06-std-analyse/test/05-vBaseClass/: 01-v_base_class.cpp  02-v_func.cpp
src/06-std-analyse/test/06-my-op/: 01_my_op.cpp  02_class_operator.cpp
src/06-std-analyse/test/07-TypeExtraction/: 01_type_extraction.cpp
src/06-std-analyse/test/08-Lambda/: 01_Lambda.cpp
src/06-std-analyse/test/09-auto/: 01_auto_return.cpp
src/06-std-analyse/test/10-tmp-obj-test/: 01_tmp_obj_test.cpp  02_msvc_opt_bug_ka.cpp  02_rxv_ub.cpp  03_xv_ub.cpp  04_oku_move_test.cpp
src/06-std-analyse/test/11-template-find/: 01_test_g_or_class.cpp  02_partial_specialization.cpp  03_auto_in_class.cpp  04_wchar_t.cpp
src/06-std-analyse/test/12-reflection/: enum.cpp  membersCount.cpp  structName.cpp
src/06-std-analyse/test/13-MacroMagic/: 01_see.cpp  02_PatternMatching.cpp  03_Detection.cpp  04_Recursion.cpp  04_RecursionZ.cpp  05_Comparison.cpp  06_demo.cpp  07_all_activation.cpp  08_for.cpp  09_test.cpp  10_va_opt.cpp
src/06-std-analyse/test/14-only_test/: 01_move_arg_bug_test.cpp
src/06-std-analyse/test/15-str-NTTP/: 01_why_do.cpp  02_str_tp.cpp
src/07-qt/01-qml/: .qmlls.ini  CMakeLists.txt
src/07-qt/01-qml/include/qml/: HxData.h
src/07-qt/01-qml/qml/: HX_01_Window.qml  HX_02_ItemAndRectangle.qml  HX_03_StatesAndTransitions.qml  HX_04_ComponentAndLoader.qml  HX_05_MouseArea.qml  HX_06_Button.qml  HX_07_Property.qml  HX_08_AllButton.qml  HX_09_Text.qml  HX_10_Popup.qml  HX_11_Repeater.qml  HX_12_ListView.qml  HX_13_ComboBox.qml  HX_14_FocusScope.qml  HX_15_Signal.qml  HX_16_CppAndQml.qml  Main.qml
src/07-qt/01-qml/qml/ui/: MyRectangle.qml  MySignalRect.qml
src/07-qt/01-qml/resources/: main.qrc
src/07-qt/01-qml/src/: main.cpp
src/07-qt/01-qml/src/qml/: HxData.cpp
src/08-OpenGL/: CMakeLists.txt
src/08-OpenGL/demo/00-example/: 01_main_xxx.cpp  01_test_opengl_is_install.cpp
src/08-OpenGL/demo/01-opengl-v200/: 01_opengl_func.cpp  02_opengl_yuan.cpp  03_opengl_hw01.cpp  04_opengl_hw01_prime.cpp
src/08-OpenGL/demo/03-LoadingAndCameraControl/: 00_mach.cpp  01_ClickAddPoint01.cpp  01_ClickAddPoint02.cpp  01_ClickAddPoint03Ref.cpp  02_ObjParser.cpp  02_ObjParser01.cpp  02_ObjParser02.cpp  03_CameraState.cpp  04_hw.cpp
src/08-OpenGL/include/check/: OpenGL.hpp
src/09-Linux/: CMakeLists.txt
src/09-Linux/demo/01-io_uring/: 01_io_uring_test.cpp  02_io_uring_co.cpp  03_utest.cpp
src/09-Linux/demo/02-thread/: 01_cpp_threadPool.cpp
src/09-Linux/include/coroutine/awaiter/: ExitAwaiter.hpp  PreviousAwaiter.hpp  WhenAny.hpp
src/09-Linux/include/tools/: ExceptionMode.hpp  NonVoidHelper.hpp  Uninitialized.hpp  UninitializedNonVoidVariant.hpp
src/09-os/: CMakeLists.txt
src/09-os/demo/01-io_uring/: 01_io_uring_test.cpp  03_utest.cpp
src/09-os/demo/02-thread/: 01_cpp_threadPool.cpp  02_co_threadPool.cpp
src/09-os/demo/03-iocp/: 01_iocp_test.cpp  02_when_any_test.cpp
src/09-os/include/coroutine/awaiter/: ExitAwaiter.hpp  StopAwaiter.hpp  WhenAny.hpp
src/09-os/include/coroutine/concepts/: Awaiter.hpp
src/09-os/include/coroutine/loop/: TimerLoop.hpp
src/09-os/include/coroutine/promise/: Promise.hpp
src/09-os/include/tools/: Uninitialized.hpp  UninitializedNonVoidVariant.hpp
(+133 files in other folders)
